<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8E9EC">

    <TextView
        android:id="@+id/textView"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="204dp"
        android:layout_marginBottom="40dp"
        android:text="@string/endre_pningstider"
        android:textColor="#282F3E"
        android:textSize="19sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="364dp"
        android:layout_height="30dp"
        android:layout_below="@id/textView"
        android:layout_marginStart="25dp"
        android:layout_marginTop="-18dp"
        android:layout_marginBottom="10dp"
        android:text="@string/openhours_text"
        android:textColor="#282F3E"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="364dp"
        android:layout_height="30dp"
        android:layout_below="@id/textView2"
        android:layout_marginTop="20dp"
        android:text="@string/standard_profile_remainder"
        android:layout_marginStart="25dp"
        android:textSize="14sp"
        android:textColor="#282F3E"
        android:layout_marginBottom="20dp"/>


    <TextView
        android:id="@+id/fra_tid"
        android:layout_width="52dp"
        android:layout_height="22dp"
        android:layout_below="@id/textView3"
        android:layout_marginStart="38dp"
        android:layout_marginTop="98dp"
        android:text="@string/fra"
        android:labelFor="@id/start"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/start"
        android:layout_width="111dp"
        android:layout_height="51dp"
        android:layout_below="@+id/textView3"
        android:layout_alignEnd="@+id/textView3"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="211dp"
        android:background="@drawable/rounded_corner_view"
        android:backgroundTint="#DADEE7"
        android:textAlignment="center"
        android:padding="10dp"
        android:drawablePadding="10dp"
        android:inputType="number"
        android:paddingBottom="10dp"

        android:textColor="#282F3E"
        android:textSize="18sp"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/til_tid"
        android:layout_width="52dp"
        android:layout_height="22dp"
        android:layout_below="@+id/textView3"
        android:layout_alignEnd="@+id/textView3"
        android:layout_marginTop="98dp"
        android:layout_marginEnd="150dp"
        android:layout_marginStart="10dp"
        android:text="@string/til"
        android:labelFor="@id/slutt"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/slutt"
        android:layout_width="111dp"
        android:layout_height="51dp"
        android:layout_below="@+id/textView3"
        android:layout_alignEnd="@+id/textView3"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="68dp"
        android:background="@color/card_background"
        android:backgroundTint="#DADEE7"
        android:textAlignment="center"
        android:padding="10dp"
        android:drawablePadding="10dp"
        android:inputType="number"
        android:paddingBottom="10dp"

        android:textColor="#282F3E"
        android:textSize="18sp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/save"
        android:layout_width="173dp"
        android:layout_height="51dp"
        android:layout_below="@id/fra_tid"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:background="@drawable/rounded_corners_button"
        android:backgroundTint="@color/button_grey"

        android:text="@string/lagre"
        android:layout_marginBottom="36dp"
        android:textAllCaps="false"
        android:textColor="@color/text_grey"
        android:textSize="20sp"
        app:backgroundTint="@color/button_yellow" />

</RelativeLayout>
