<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_blue">

<!--
    <androidx.appcompat.widget.Toolbar

        android:id="@+id/toolbar_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="Registrer bruker hos oss"
        app:titleTextColor="#000000" /> -->


    <TextView
        android:id="@+id/info_text"
        android:layout_width="261dp"
        android:layout_height="57dp"
        android:text="@string/registrer_deg"
        android:textColor="@color/text_light"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/passord1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.345" />

    <EditText

        android:id="@+id/email"
        android:layout_width="261dp"
        android:layout_height="57dp"
        android:layout_marginBottom="76dp"
        android:layout_marginTop="50dp"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:layout_below="@+id/info_text"
        android:inputType="textEmailAddress"
        android:paddingBottom="20dp"
        android:textColor="@color/text_light"
        android:textColorHint="@color/text_light"
        app:layout_constraintBottom_toTopOf="@+id/passord1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_text"
        android:importantForAutofill="no" />

    <EditText

        android:id="@+id/passord1"
        android:layout_width="261dp"
        android:layout_height="57dp"
        android:layout_below="@+id/email"
        android:layout_marginTop="28dp"
        android:drawablePadding="10dp"
        android:hint="@string/passord"
        android:inputType="textPassword"
        android:paddingBottom="20dp"
        android:textColor="@color/text_light"
        android:textColorHint="@color/text_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:importantForAutofill="no" />

    <EditText

        android:id="@+id/passord2"
        android:layout_width="261dp"
        android:layout_height="57dp"
        android:layout_below="@+id/passord1"
        android:layout_marginTop="28dp"
        android:drawablePadding="10dp"
        android:hint="@string/bekreft_passord"
        android:inputType="textPassword"
        android:paddingBottom="20dp"
        android:textColor="@color/text_light"
        android:textColorHint="@color/text_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passord1"
        android:importantForAutofill="no" />

    <EditText

        android:id="@+id/name"
        android:layout_width="261dp"
        android:layout_height="57dp"
        android:layout_below="@+id/passord2"
        android:layout_marginTop="28dp"
        android:drawablePadding="10dp"
        android:hint="@string/name"
        android:inputType="text"
        android:paddingBottom="20dp"
        android:textColor="@color/text_light"
        android:textColorHint="@color/text_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passord2"
        android:importantForAutofill="no" />

    <Button

        android:id="@+id/registrer_knapp"
        android:layout_width="173dp"
        android:layout_height="51dp"
        android:layout_below="@+id/name"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/rounded_corners_button"
        android:text="@string/registrer_deg"
        android:textAllCaps="false"
        android:textColor="@color/text_grey"
        android:textSize="18sp"
        app:backgroundTint="@color/button_yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintVertical_bias="0.114" />

</androidx.constraintlayout.widget.ConstraintLayout>