<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
   >

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="411dp"
        android:layout_height="132dp"
        android:orientation="vertical"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:backgroundTint="#EEF0F4">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="132dp">

            <TextView
                android:id="@+id/date"
                android:layout_width="226dp"
                android:layout_height="43dp"
                android:text="@string/date"
                android:textColor="@color/text_grey"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.044"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.085" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/weather_icon"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.044"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date"
                app:layout_constraintVertical_bias="0.272" />

            <TextView
                android:id="@+id/temp"
                android:layout_width="86dp"
                android:layout_height="43dp"
                android:text="@string/degrees"
                android:textColor="@color/text_grey"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.065"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.717" />

            <Button
                android:id="@+id/staff_button"
                android:layout_width="189dp"
                android:layout_height="51dp"
                android:background="@drawable/rounded_corners_button"
                android:text="@string/lav_bemanning"
                android:textAllCaps="false"
                app:backgroundTint="@color/button_yellow"
                android:textColor="@color/text_grey"
                android:textSize="18sp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.625"
                app:layout_constraintStart_toEndOf="@+id/temp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.735" />
            <Button
                android:id="@+id/alert_lable"
                android:layout_width="189dp"
                android:layout_height="51dp"
                android:background="@drawable/rounded_corners_button"
                android:text="@string/varsel_sendt_mottatt"
                android:visibility="invisible"
                android:textAllCaps="false"
                app:backgroundTint="@color/button_blue_text"
                android:textColor="@color/text_grey"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.625"
                app:layout_constraintStart_toEndOf="@+id/temp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.735" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>